k8s/applications/nix-cache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harmonia
  namespace: nix-cache
  labels:
    app: harmonia
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: harmonia
